# SUM-Parts-Benchmarking-Part-Level-Semantic-Segmentation-of-Urban-Meshes

./: README.md
assets/: sum.bib  sum_parts.bib
interactive_annotation/ISAT_with_segment_anything/ISAT/scripts/: voc.py
interactive_annotation/ISAT_with_segment_anything/ISAT/ui/: info_dock.py  info_dock.ui
interactive_annotation/ISAT_with_segment_anything/ISAT/widgets/: canvas.py  converter_dialog.py  info_dock_widget.py  mainwindow.py  polygon.py
interactive_annotation/Scripts/: 2D_evaluation.py  auto_screenshot.py  error_mask.py  flip_background.py  gaussian_noise.py  image32_to_24.py  merge_binary_masks.py  performance_monitor.py  rgb_plot.py
interactive_annotation/SimpleClick/interactive_demo/: canvas.py
semantic_segmentation/KPConv/: test_models.py  train_UrbanMesh.py
semantic_segmentation/KPConv/datasets/: UrbanMesh.py
semantic_segmentation/KPConv/utils/: config.py
semantic_segmentation/Open3D_ML/: run_sumv2.txt
semantic_segmentation/Open3D_ML/ml3d/configs/: randlanet_sumv2_texture.yml  randlanet_sumv2_triangle.yml  sparseconvunet_sumv2_texture.yml  sparseconvunet_sumv2_triangle.yml
semantic_segmentation/Open3D_ML/ml3d/datasets/: __init__.py  sumv2_texture.py  sumv2_triangle.py
semantic_segmentation/Open3D_ML/ml3d/torch/pipelines/: semantic_segmentation.py
semantic_segmentation/PointNeXt_bundle/: install.sh  run_txt
semantic_segmentation/PointNeXt_bundle/cfgs/: default.yaml
semantic_segmentation/PointNeXt_bundle/cfgs/s3dis/: pointvector-xl.yaml
semantic_segmentation/PointNeXt_bundle/cfgs/sumv2_texture/: default.yaml  pointnet++msg.yaml  pointnet.yaml  pointnext-xl.yaml  pointvector-xl.yaml
semantic_segmentation/PointNeXt_bundle/cfgs/sumv2_triangle/: default.yaml  pointnet++msg.yaml  pointnet.yaml  pointnext-xl.yaml  pointvector-xl.yaml
semantic_segmentation/PointNeXt_bundle/examples/segmentation/: main.py
semantic_segmentation/PointNeXt_bundle/openpoints/dataset/: __init__.py  datalist.py
semantic_segmentation/PointNeXt_bundle/openpoints/dataset/sumv2_texture/: __init__.py  sumv2_texture.py
semantic_segmentation/PointNeXt_bundle/openpoints/dataset/sumv2_triangle/: __init__.py  sumv2_triangle.py
semantic_segmentation/PointNeXt_bundle/openpoints/models/backbone/: __init__.py
semantic_segmentation/PointNeXt_bundle/openpoints/utils/: ckpt_util.py  metrics.py
semantic_segmentation/SuperPointGraph/: .gitignore  build_path_for_partition.txt  command.txt  requirements
semantic_segmentation/SuperPointGraph/learning/: custom_dataset.py  evaluate.py  graphnet.py  main.py  metrics.py  modules.py  my_custom_dataset.py  my_custom_dataset_myg.py  my_evaluate.py  my_main.py  my_spg.py  pointnet.py  s3dis_dataset.py  sema3d_dataset.py  spg.py
semantic_segmentation/SuperPointGraph/libs_temp/: lib_notes.txt
semantic_segmentation/SuperPointGraph/partition/: graphs.py  graphs_sim.py  my_graphs.py  my_partition.py  my_partition_myg.py  my_provider.py  my_visualize.py  partition.py  provide_sim.py  provider.py  visualize.py
semantic_segmentation/SuperPointGraph/partition/cut-pursuit/src/: CMakeLists.txt  test.py
semantic_segmentation/SuperPointGraph/partition/ply_c/: CMakeLists.txt  ply_c.cpp
semantic_segmentation/SuperPointGraph/partition/python_parsing/src/: CMakeLists.txt  python_parsing.cpp
semantic_segmentation/SuperPointGraph/supervized_partition/: generate_partition.py  my_evaluate_partition.py  my_folderhierarchy.py  my_generate_partition.py  my_graph_processing.py  my_supervized_partition.py
